Wrote on BachelorThesis.

--- a/LaTex/BachelorThesis/arbeit-vorlage-praeambel.tex
+++ b/LaTex/BachelorThesis/arbeit-vorlage-praeambel.tex
@@ -21,6 +21,8 @@
 \setkomafont{descriptionlabel}{\bfseries\rmfamily} % für description Umgebungen
 \setkomafont{captionlabel}{\small\bfseries}
 \setkomafont{caption}{\small}
+\setcounter{tocdepth}{3} 
+\setcounter{secnumdepth}{3}
 % Sprache: Deutsch
 \usepackage[ngerman]{babel} % Silbentrennung
 % PDF
